Fix: Home Page Hero Section in Dark Mode
Because:
* It was using the bg accent dark color which did not blend correctly with the navbar.

This commit:
* Change the hero section to use the main darkmode background color instead of the accent color.

--- a/app/assets/stylesheets/dark-mode.css
+++ b/app/assets/stylesheets/dark-mode.css
@@ -42,7 +42,8 @@ body,
 
 .curriculum-details-tile,
 .odin-dark-mobile-menu,
-.odin-dark-nav-item {
+.odin-dark-nav-item,
+.hero {
   background-color: var(--dark-bg-color) !important;
 }
 
